took header period

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Built with Jekyll 3.2.0
 
 # Setup
-title:               Digital Editions of Henry James.
+title:               Digital Editions of Henry James
 tagline:             'Daisy Miller: A Comedy'
 description:         'Ed is a Jekyll theme designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
 url:                 'http://britaneeelizabeth.github.io'
