contact information updated

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ baseurl:             '/ed'
 
 # About/contact
 author:
-  name:              Alex Gil
-  url:               https://twitter.com/elotroalex
-  email:             colibri.alex@gmail.com
+  name:              Britanee Smith
+  url:               http://britaneeelizabeth.github.io
+  email:             brit1216@tamu.edu
 
 # Permalinks
 
